--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,8 @@
-tensorflow-gpu
-keras
-jupyter
-notebook
-matplotlib
+jupyter==1.0.0
+Keras==2.4.2
+matplotlib==3.2.2
+notebook==6.0.3
+numpy==1.19.0
+Pillow==7.1.2
+tensorflow-gpu==2.2.0
+tqdm==4.46.1
